[tool.poetry]
name = "seaborn-image"
version = "0.3.0"
description = "seaborn-image: image data visualization and processing like seaborrn using matplotlib, scipy and scikit-image"
authors = ["Sarthak Jariwala <jariwala@uw.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SarthakJariwala/seaborn-image"
repository = "https://github.com/SarthakJariwala/seaborn-image"
documentation = "https://seaborn-image.readthedocs.io/"

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.2.2"
scikit-image = "^0.17.2"
matplotlib-scalebar = "^0.6.2"
palettable = "^3.3.0"
scipy = "^1.5.1"
importlib_metadata = {version = "^1.7.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
safety = "^1.9.0"
coverage = {extras = ["toml"], version = "^5.2"}
pytest-cov = "^2.10.0"
flake8-docstrings = "^1.5.0"
sphinx = "^3.1.2"
codecov = "^2.1.8"
sphinx_bootstrap_theme = "^0.7.1"
sphinxcontrib-images = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
