[tool.poetry]
name = "seaborn-image"
version = "0.4.1"
description = "seaborn-image: image data visualization and processing like seaborrn using matplotlib, scipy and scikit-image"
authors = ["Sarthak Jariwala <jariwala@uw.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SarthakJariwala/seaborn-image"
repository = "https://github.com/SarthakJariwala/seaborn-image"
documentation = "https://seaborn-image.readthedocs.io/"
classifiers = [
    "Framework :: Matplotlib",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Image Processing"
]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.2.2"
scikit-image = "^0.17.2"
matplotlib-scalebar = "^0.6.2"
palettable = "^3.3.0"
scipy = "^1.5.1"
importlib_metadata = {version = "^1.7.0", python = "<3.8"}
pooch = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
safety = "^1.9.0"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
flake8-docstrings = "^1.5.0"
sphinx = "^3.3.1"
codecov = "^2.1.10"
sphinx_bootstrap_theme = "^0.7.1"
xdoctest = "^0.15.0"
sphinx-gallery = "^0.8.1"
nbsphinx = "^0.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
