[tool.poetry]
name = "seaborn-image"
version = "0.5.1"
description = "Attractive, descriptive and effective image visualization with seaborn-like API built on top of matplotlib"
authors = ["Sarthak Jariwala <contact@sarthakjariwala.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SarthakJariwala/seaborn-image"
repository = "https://github.com/SarthakJariwala/seaborn-image"
documentation = "https://seaborn-image.readthedocs.io/"
classifiers = [
    "Framework :: Matplotlib",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Image Processing"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
matplotlib = ">= 3.2.2"
scikit-image = ">= 0.17.2"
matplotlib-scalebar = ">=0.7.0,<0.9.0"
palettable = ">= 3.3.0"
scipy = ">= 1.5.1"
importlib_metadata = {version = "^1.7.0", python = "<3.8"}
pooch = ">= 1.2.0"

[tool.poetry.dev-dependencies]
pytest = ">= 7.1.2"
black = ">= 20.8b1"
safety = ">= 1.10.2"
coverage = {extras = ["toml"], version = ">= 6.3"}
pytest-cov = ">= 2.10.1"
flake8-docstrings = ">= 1.5.0"
sphinx = ">= 4.3.2"
codecov = ">= 2.1.10"
xdoctest = ">= 0.15.10"
sphinx-gallery = ">= 0.9.0"
nbsphinx = ">= 0.8.0"
pydata-sphinx-theme = ">= 0.7.2"

[tool.poetry.group.dev.dependencies]
nox-poetry = "^1.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
